# Argus

./: .argus-intelligent-audit.env.example  .dockerignore  .env.bak.20260507-ffmpeg-fix  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Makefile  README.md  README_EN.md  REASONIX.md  argus-bootstrap.sh  argus-reset-rebuild-start.sh  argus-shutdown.sh  code_to_write.md  docker-compose.build.yml  docker-compose.frontend-dev.yml  docker-compose.frontend-only.yml  docker-compose.full.yml  docker-compose.hybrid.yml  docker-compose.override.yml  docker-compose.podman.yml  docker-compose.prod.cn.yml  docker-compose.prod.yml  docker-compose.release-cython.yml  docker-compose.release.yml  docker-compose.self-contained.yml  docker-compose.yml  docker_bootstrap.sh  env.example  journey-into-argus.md  llm.env.example  package-lock.json  skills-lock.json  verification
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  SANDBOX_RUNNER_MIGRATION.md  docker-entrypoint.sh  env.example  main.py  pyproject.toml  requirements-heavy.txt  requirements-lock.txt  requirements.txt  start.sh  test_error_extraction.py  test_run_code_error_fix.py  test_verification_structure.py
backend/agentflow/fixtures/: p1_failure_path_output.json  p1_happy_path_output.json  p1_native_artifacts_only_output.json  p1_static_origin_rejected_output.json  runner_output_empty_findings.json
backend/agentflow/pipelines/: intelligent_audit.py
backend/agentflow/prompts/: audit_reporter.md  env_interpreter.md  vuln_reasoner.md
backend/agentflow/schemas/: runner_input.schema.json  runner_output.schema.json
backend/agentflow/tests/: test_pipeline_provider_dispatch.py  test_runner_input_schema.py
backend/agents/analysis/: README.md  agent.toml  container.env
backend/agents/recon/: README.md  agent.toml  container.env
backend/agents/report/: README.md  agent.toml
backend/agents/shared/: config.example.json
backend/agents/verification/: README.md  agent.toml
backend/alembic/versions/: 1d99cd010134_merge_heads.py  311959fcb446_.py  5b0f3c9a6d7e_squashed_baseline.py  6c8d9e0f1a2b_finalize_projects_zip_file_hash.py  8c1d2e3f4a5b_add_agent_finding_identity.py  9d3e4f5a6b7c_add_bandit_rule_states.py  9d4e3f5g6h13_add_gitleaks_tables.py  a7b8c9d0e1f2_add_phpstan_tables.py  add_confidence_description_cwe_to_opengrep_rules.py  b2c3d4e5f6a7_add_bandit_rule_soft_delete.py  d4e5f6a7b8c9_add_prompt_skills_table.py  (+7 more)
backend/app/: main.py
backend/cython_build/: exclusion_list.txt  setup.py
backend/docker/: bandit-runner.Dockerfile  flow-parser-runner.Dockerfile  flow-parser-runner.requirements.txt  gitleaks-runner.Dockerfile  opengrep-runner.Dockerfile  phpstan-runner.Dockerfile  pmd-runner.Dockerfile  yasa-runner.Dockerfile
backend/migrations/: 0001_system_configs.sql  0002_rust_projects.sql  0003_rust_scan_rule_assets.sql
backend/scripts/: create_agent_demo_data.py  dev-entrypoint.sh  flow_parser_host.py  flow_parser_runner.py  generate_runtime_tool_docs.py  package_source_selector.py  sync_mcp_sources.sh  validate_runtime_tool_docs.py
backend/src/: app.rs  archive.rs  config.rs  error.rs  lib.rs  main.rs  project_file_cache.rs  proxy.rs  state.rs
backend/tests/: a3s_to_docker_fallback.rs  a3s_to_podman_fallback.rs  agentflow_fixture_matrix.rs  bootstrap_startup.rs  codegraph_ac2_acceptance.rs  codegraph_ac3_acceptance.rs  codeql_c_rule_regression.rs  conftest.py  cubesandbox_hostpath_probe.rs  cubesandbox_opengrep_auto_destroy.rs  cubesandbox_reconcile_test.rs  cubesandbox_runtime.rs  cwe_catalog_api.rs  docker_backend_build_contract.rs  finding_payload_runtime.rs  graceful_shutdown_smoke.rs  hermes_agent_bootstrap.rs  hermes_agent_discovery.rs  hermes_build_surface_retired.rs  hermes_image_contract.rs  hermes_role_dispatch.rs  hermes_runtime_contract.rs  http_smoke.rs  intelligent_audit_blacklist.rs  intelligent_libplist_smoke.rs  intelligent_tasks_api.rs  joern_fixture_acceptance.rs  joern_rule_corpus.rs  legacy_agent_runtime_retired.rs  no_cubesandbox_refs.rs  no_pool_residue.rs  opengrep_c_rule_fp_hardening.rs  opengrep_ffmpeg_fp_hardening.rs  opengrep_only_static_tasks.rs  opengrep_rule_validation.rs  opengrep_scan_script.rs  projects_api.rs  proxy_fallback.rs  retired_sandbox_refs.rs  runtime_env_bootstrap.rs  (+166 more)
(+9120 files in other folders)
