[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend_rust"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "multipart"] }
base64 = "0.22"
bcrypt = "0.17"
bytes = "1.10"
fernet = "0.2"
http = "1.3"
http-body-util = "0.1"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["json", "postgres", "runtime-tokio-rustls", "time", "uuid"] }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.44", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.16", features = ["serde", "v4"] }
toml = "0.8"
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.27.0"

[[bin]]
name = "backend-runtime-startup"
path = "src/bin/backend_runtime_startup.rs"
