[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend_rust"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "multipart"] }
base64 = "0.22"
bzip2 = "0.5"
bytes = "1.10"
fernet = "0.2"
flate2 = "1.0"
http = "1.3"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["json", "postgres", "runtime-tokio-rustls", "time", "uuid"] }
tar = "0.4"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.44", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.16", features = ["serde", "v4"] }
toml = "0.8"
xz2 = "0.1"
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
zstd = "0.13"

[dev-dependencies]
tempfile = "3.27.0"

[[bin]]
name = "backend-runtime-startup"
path = "src/bin/backend_runtime_startup.rs"
